@@ -73,6 +73,7 @@ correct_lag    = True       # If spikes are aligned when merging. May be better 
 erase_all      = True       # If False, a prompt will ask you to export if export has already been done
 export_pcs     = prompt     # Can be prompt [default] or in none, all, some
 export_all     = False      # If True, unfitted spikes will be exported as the last Ne templates
+sparse_export  = False      # For recent versions of phy, and large number of templates/channels
 
 [validating]
 nearest_elec   = auto       # Validation channel (e.g. electrode closest to the ground truth cell)
